force-app/main/default/objects/C_Question__c/C_Question__c.object-meta.xml
<CustomObject>
    <description>Question within a form section or reusable library template</description>
    <label>Question</label>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>