force-app/main/default/objects/C_Question__c/fields/C_Accepted_File_Types__c.field-meta.xml
<CustomField>
    <fullName>C_Accepted_File_Types__c</fullName>
    <label>Accepted File Types</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>