force-app/main/default/objects/C_Question__c/fields/C_Cross_Field_Rules_JSON__c.field-meta.xml
<CustomField>
    <fullName>C_Cross_Field_Rules_JSON__c</fullName>
    <label>Cross-field Validation Rules (JSON)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>