force-app/main/default/objects/C_Question__c/fields/C_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>C_Help_Text__c</fullName>
    <label>Help Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>