force-app/main/default/objects/C_Question__c/fields/C_Is_Disabled__c.field-meta.xml
<CustomField>
    <fullName>C_Is_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disabled</label>
    <type>Checkbox</type>
</CustomField>