force-app/main/default/objects/C_Question__c/fields/C_Is_Required__c.field-meta.xml
<CustomField>
    <fullName>C_Is_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>