force-app/main/default/objects/C_Question__c/fields/C_Layout_Span__c.field-meta.xml
<CustomField>
    <fullName>C_Layout_Span__c</fullName>
    <label>Layout Span</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
                <default>true</default>
                <label>Full</label>
            </value>
            <value>
                <fullName>Half</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>