force-app/main/default/objects/C_Question__c/fields/C_Max_File_Size_MB__c.field-meta.xml
<CustomField>
    <fullName>C_Max_File_Size_MB__c</fullName>
    <label>Max File Size (MB)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>