force-app/main/default/objects/C_Question__c/fields/C_Max_Files__c.field-meta.xml
<CustomField>
    <fullName>C_Max_Files__c</fullName>
    <label>Max Files</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>