force-app/main/default/objects/C_Question__c/fields/C_Max_Length__c.field-meta.xml
<CustomField>
    <fullName>C_Max_Length__c</fullName>
    <label>Max Length</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>