force-app/main/default/objects/C_Question__c/fields/C_Max_Value__c.field-meta.xml
<CustomField>
    <fullName>C_Max_Value__c</fullName>
    <label>Max Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>