force-app/main/default/objects/C_Question__c/fields/C_Max_Word_Count__c.field-meta.xml
<CustomField>
    <fullName>C_Max_Word_Count__c</fullName>
    <label>Max Word Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>