force-app/main/default/objects/C_Question__c/fields/C_Number_Decimal_Places__c.field-meta.xml
<CustomField>
    <fullName>C_Number_Decimal_Places__c</fullName>
    <label>Number Decimal Places</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>