force-app/main/default/objects/C_Question__c/fields/C_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>C_Placeholder__c</fullName>
    <label>Placeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>