force-app/main/default/objects/C_Question__c/fields/C_Question_Text__c.field-meta.xml
<CustomField>
    <fullName>C_Question_Text__c</fullName>
    <label>Question Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>