force-app/main/default/objects/C_Question__c/fields/C_Section__c.field-meta.xml
<CustomField>
    <fullName>C_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <referenceTo>C_Section__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>C_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>