force-app/main/default/objects/C_Question__c/fields/C_Source_Question__c.field-meta.xml
<CustomField>
    <fullName>C_Source_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Question (Library)</label>
    <referenceTo>C_Question__c</referenceTo>
    <relationshipLabel>Form Questions</relationshipLabel>
    <relationshipName>C_Form_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>