force-app/main/default/objects/C_Question__c/fields/C_Table_Columns__c.field-meta.xml
<CustomField>
    <fullName>C_Table_Columns__c</fullName>
    <label>Table Columns</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>