force-app/main/default/objects/C_Question__c/fields/C_Table_Max_Rows__c.field-meta.xml
<CustomField>
    <fullName>C_Table_Max_Rows__c</fullName>
    <label>Table Max Rows</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>