force-app/main/default/objects/C_Question__c/fields/C_Validation_Message__c.field-meta.xml
<CustomField>
    <fullName>C_Validation_Message__c</fullName>
    <label>Validation Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>