force-app/main/default/objects/C_Question__c/recordTypes/Form.recordType-meta.xml
<RecordType>
    <fullName>Form</fullName>
    <active>true</active>
    <description>Question placed within a form section</description>
    <label>Form</label>
</RecordType>