force-app/main/default/objects/C_Question__c/listViews/All_Questions.listView-meta.xml
<ListView>
    <fullName>All_Questions</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>C_Type__c</columns>
    <columns>C_Section__c</columns>
    <columns>C_Order__c</columns>
    <columns>C_Is_Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Questions</label>
</ListView>